--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <title>Battle of the Druids - Web Edition</title>
+    <meta name="description" content="Turn-based RPG with character classes, tactical combat, and progression. Battle enemies to earn Dragon Shards!">
     <style>
         body {
             margin: 0;
