Add content marketing hub and traffic building resources
- Developer blog page with SEO-optimized content
- Social media templates for Reddit, Twitter, Discord
- Blog post ideas for technical and gaming communities
- Email templates for gaming press outreach
- Content strategy for building AdSense-ready traffic
- Professional blog design matching game aesthetic

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 Controls: Touch/Mouse to interact • ESC to go back • Enter to confirm
             </div>
             <div style="margin-top: 15px; font-size: 12px;">
+                <a href="blog.html" style="color: #bdc3c7; text-decoration: none; margin-right: 15px;">Developer Blog</a>
                 <a href="privacy-policy.html" style="color: #bdc3c7; text-decoration: none;">Privacy Policy</a>
             </div>
         </div>
