Fix mobile touch gestures on game canvas
- Set Phaser touch capture to false to allow native browser gestures
- Add CSS to enable touch-action: auto on game canvas
- Allow pinch-to-zoom and scrolling directly on the game area
- Fix issue where touch gestures only worked outside game canvas

--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
                 touch-action: auto;
             }
             
+            /* Allow zoom/scroll on game canvas */
+            #game-container canvas {
+                touch-action: auto !important;
+                pointer-events: auto;
+            }
+            
             .game-info {
                 font-size: 12px !important;
                 margin-top: 10px !important;
