Fix itch.io redirect to point directly to game subdirectory
Update itch-redirect.html to point to /battle-of-the-druids/ instead of main site.
Players from itch.io will now go directly to the game rather than company page.

--- a/battle-of-the-druids/itch-redirect.html
+++ b/battle-of-the-druids/itch-redirect.html
@@ -172,7 +172,7 @@
             </ul>
         </div>
         
-        <a href="https://titanbladegames.com/" 
+        <a href="https://titanbladegames.com/battle-of-the-druids/" 
            class="play-button" 
            target="_blank">
             🚀 PLAY NOW - FREE!
@@ -200,7 +200,7 @@
         // Auto-redirect after 10 minutes
         let countdown = 600;
         const countdownElement = document.getElementById('countdown');
-        const gameUrl = 'https://titanbladegames.com/';
+        const gameUrl = 'https://titanbladegames.com/battle-of-the-druids/';
         
         // Function to redirect safely
         function redirectToGame() {
