Launch Isle of Adventure: Complete point-and-click adventure game with website announcement
• Add complete Isle of Adventure game with Phaser.js framework
• Implement point-and-click adventure gameplay with rich storytelling
• Add interactive dialogue systems for all major character encounters
• Include immersive soundtrack with Creative Commons licensed music
• Add opening credits video and victory sequences with TitanBlade Games branding
• Implement auto-save system and seamless scene progression
• Add comprehensive website announcement section featuring new game
• Include game screenshots and embedded welcome video on main site
• Update TitanBlade Games branding throughout all content
• Fix button positioning and UI issues for optimal user experience

--- a/battle-of-the-druids/index.html
+++ b/battle-of-the-druids/index.html
@@ -6,7 +6,7 @@
     <title>Battle of the Druids - Free Online RPG Game</title>
     <meta name="description" content="Play Battle of the Druids - A free turn-based RPG with 4 character classes, tactical combat, equipment progression, and 9 unique locations. Play instantly in your browser!">
     <meta name="keywords" content="free online rpg, browser game, turn-based combat, fantasy rpg, character classes, online game">
-    <meta name="author" content="CodeCraft Games">
+    <meta name="author" content="TitanBlade Games">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph / Social Media -->
