Enable mobile zoom and pan functionality for Isle of Adventure
• Allow pinch-to-zoom gestures on mobile devices
• Enable touch scrolling and panning around game area
• Configure Phaser for multi-touch support (3 active pointers)
• Remove viewport restrictions that prevented zooming
• Set game canvas to allow all touch actions
• Update main site video caption text for clarity

Mobile users can now resize and move the game window using finger gestures while maintaining full game interactivity.

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     Your browser does not support the video tag.
                 </video>
                 <div style="margin-top: 1rem; font-style: italic; color: #666;">
-                    Watch the opening credits sequence featuring professional TitanBlade Games branding
+                    Watch the opening credits sequence of Isle of Adventure
                 </div>
             </div>
         </section>
